# arturas_k_library

./: README.md  db_objeckt.pkl  library.db  pyproject.toml  user.pkl
arturas_k_library/: config.py  main.py  maindb.py  webapp.py
arturas_k_library/functions/: file_manager.py  helper.py  import_books.py  sql_manager.py
arturas_k_library/modules/: book.py  library.py  user.py
arturas_k_library/web/: auth.py  table.py
modules/: reader.py
