[tool.poetry]
name = "arturas-k-library"
version = "0.1.0"
description = ""
authors = ["arturas-codeacademy <arturas.korsakas@codeacademylt.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pandas = "^2.2.3"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
